fixed navbar alignment

--- a/scrollytelly/styles.css
+++ b/scrollytelly/styles.css
@@ -204,9 +204,11 @@
   }
   
   /* ----- data styles ------ */
+  /*
   .container {
     width: 900px;
   }
+  */
   
   #graphic {
     padding-top: 60px;
