--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -8,9 +8,6 @@ body {
 }
 
 /* Navbar */
-.navbar {
-  margin-left: -70px;
-}
 
 .navbar-brand .logo {
   height: 40px;
@@ -33,6 +30,9 @@ body {
   border-radius: 5px; 
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Soft shadow */
   overflow: hidden;
+  right: 0;
+  position: absolute;
+  left:auto;
 }
 
 .navbar .dropdown-menu .dropdown-item {
