--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -94,7 +94,7 @@ body {
 }
 
 .btn-blue {
-  background-color: #0f58ace3;
+  background-color: #1F3C88;
   color: #e0e1dd;
   padding: 1.2%;
   border-radius: 15px;
@@ -105,7 +105,7 @@ body {
 }
 
 .btn-blue:hover {
-  background-color: #2375d3e3;
+  background-color: #1F3C88;
   color: #e0e1dd;
   text-decoration: none;
 }
@@ -316,7 +316,7 @@ ol.gradient-list > li::before {
 
 .what-to-do-section.text-center .check-out-link:before{
   content: '';
-  background: #54b3d6;
+  background: #c92f2f;
   display: block;
   position: absolute;
   bottom: -3px;
