--- a/frontend/css/phishings.css
+++ b/frontend/css/phishings.css
@@ -74,7 +74,7 @@ section {
     /*
     background: rgba(200, 201, 212, 0.445);
     */
-    background: #0d40c1bc;
+    background: #0056b3;
     border-radius: 0 0.5rem 0.5rem 0.5rem;
     margin-top: 1rem;
     min-height: 3rem;
