--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -490,3 +490,25 @@ ol.gradient-list > li::before {
   background-color: rgba(0, 86, 179, 0.7);
   color: white;
 }
+
+.email-detection-what-to-do-section {
+  background-color: rgba(31, 60, 136, 0.1);
+  justify-content: center;
+  align-items: center;
+  padding: 5%;
+}
+
+.email-detection-what-to-do-section h3 {
+  text-align: center;
+  margin-bottom: 3%;
+}
+
+.email-detection-what-to-do-section ul {
+  list-style-type: square;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.email-detection-what-to-do-section li {
+  padding: 0.5%;
+}
