--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -360,10 +360,21 @@ ol.gradient-list > li::before {
   border: none;
 }
 
+.card-container .cardEmpty {
+	position: relative;
+	width: 300px;
+	height: 400px;
+	background: rgba(115, 115, 115, 0);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: none;
+}
+
 .card-container .card .content {
 	position: relative;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
 	transition: 0.5s;
