--- a/frontend/css/phishings.css
+++ b/frontend/css/phishings.css
@@ -1,6 +1,11 @@
-h1, h2 {
-    font-size: 1.5rem;
+h1 {
+    font-size: 2rem;
     font-weight: 700;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 section {
