--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -7,6 +7,11 @@ body {
   overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
+.container h1 {
+  font-weight: 650;
+  font-size: 2.1rem;
+}
+
 /* Navbar */
 .navbar-brand .logo {
   height: 40px;
