--- a/frontend/scamReport/style.css
+++ b/frontend/scamReport/style.css
@@ -12,6 +12,10 @@ body {
     margin: 0 auto;
 }
 
+.container h1 {
+    font-weight: 550;
+    font-size: 2.1rem;
+}
 /* Navbar */
 
 .navbar-brand .logo {
