--- a/scrollytelly/styles.css
+++ b/scrollytelly/styles.css
@@ -259,3 +259,10 @@
     width: 900px;
     margin-top: -100px; /* Adjust to ensure the remaining content is below the centered section */
   }
+
+  .stepbottom {
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    line-height: 23px;
+    color: #767678;
+  }
